bk_ida/gccida/c0/get_attr_prefix_0f
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20301:80: error: expected expression
if ( ( unsigned __int16)**( _DWORD **)&insn[2] != 40 && asm_noperands( *( rtx *)&insn[2]) < 0 ) 
                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20302:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20302:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20545:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !aligned_operand( recog_data_0.operand[1], HImode)) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20564:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v11 = !q_regs_operand( recog_data_0.operand[0], QImode) || ( ( 1 << ix86_cpu) & x86_movx) != 0; 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20640:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] == 67 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20641:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20643:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20655:37: error: use of undeclared identifier 'recog_data_0'
v7 = ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] == 67 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20656:9: error: expected ':'
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
        ^
        : 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20656:1: note: to match this '?'
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20656:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20672:37: error: use of undeclared identifier 'recog_data_0'
if ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] == 67 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20673:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[0]->fld[0].rtx; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20675:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[0]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20687:37: error: use of undeclared identifier 'recog_data_0'
v3 = ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] == 67 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20688:9: error: expected ':'
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
        ^
        : 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20688:1: note: to match this '?'
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/insn-attrtab.c:20688:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_prefix_0f/src/obj/insn-attrtab.o] Error 1
